ui fixes plus conversion to dark mode

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -622,15 +622,6 @@ select {
     }
 }
 
-@media screen and (max-width: 1280px) {
-    body,
-    input,
-    textarea,
-    select {
-        font-size: 13pt;
-    }
-}
-
 @media screen and (max-width: 1000px) {
     body,
     input,
@@ -2015,14 +2006,54 @@ body.is-touch .poptrox-popup .closer {
 }
 
 #skills {
-    background-color: white;
-    filter: brightness(95%);
+    /* background-color: white; */
+    background-color: #222;
+    filter: brightness(90%);
+    color: white;
+}
+
+#work {
+    /* background-color: white; */
+    background-color: #222;
+    /* filter: brightness(95%); */
+    color: white;
+}
+
+#header {
+    /* background-color: white; */
+    background-color: #222 !important;
+    /* filter: brightness(95%); */
+    color: white !important;
+    font-size: 22px;
+    margin-bottom: 0px;
+    /* display: flex; */
+}
+
+.headerLinks {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.navItems {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    margin: 2px 10px 0px 10px;
+    /* padding: 0px 10px 10px 0px; */
+    /* line-height: 1em !important; */
 }
 
 .listName {
     /* justify-self: flex-start; */
+    margin-left: 10px;
     margin-right: auto;
-    padding-left: 0.3em;
+}
+
+.navLinks {
+    /* line-height: 1em !important; */
+    height: 100%;
 }
 
 #header nav ul {
@@ -2307,11 +2338,24 @@ body.is-touch .main {
         text-align: center;
         padding: 3em 10px 3em 10px;
     }
+
+    .skill-list {
+        font-size: 12px;
+    }
+    .skill-title {
+        font-size: 18px;
+    }
 }
 
 @media screen and (max-width: 480px) {
     .main > .content {
         max-width: calc(100% - 1.5em);
+    }
+    .skill-list {
+        font-size: 12px;
+    }
+    .skill-title {
+        font-size: 18px;
     }
 }
 
@@ -2394,6 +2438,13 @@ body.is-touch .main {
     #footer ul.menu li:first-child {
         margin-top: 0;
         padding-top: 0;
+    }
+
+    .skill-list {
+        font-size: 12px;
+    }
+    .skill-title {
+        font-size: 18px;
     }
 }
 
@@ -2502,6 +2553,7 @@ a {
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
+    color: white;
 }
 
 .skill-column {
@@ -2519,7 +2571,7 @@ a {
 }
 
 .skill-title {
-    font-size: 30px !important;
+    font-size: 20px !important;
     align-self: center;
     background-color: #111;
     border-top-right-radius: 10px;
@@ -2534,6 +2586,7 @@ a {
     width: 100%;
     margin: 0;
     padding: 2px;
+    font-size: 15px !important;
 }
 
 .skill-item-alter {
@@ -2587,4 +2640,13 @@ a:link {
     margin-bottom: 0;
     font-size: 24px !important;
     padding: 10px;
+}
+
+@media screen and (max-width: 1280px) {
+    body,
+    input,
+    textarea,
+    select {
+        font-size: 13pt;
+    }
 }
